--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo-List</title>
 </head>
+
 <body>
-    <h1></h1>
+    <div>
+        <h1>Today's To Do</h1>
+    </div>
+    <div>
+        <input type="text">
+    </div>
+    <ul class="todo-list-holder">
+
+    </ul>
+    <button type="button">Clear all completed</button>
 </body>
+
 </html>
