--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/654cf8d94e.js" crossorigin="anonymous"></script>
     <title>Todo-List</title>
 </head>
 
 <body>
-    <div>
-        <h1>Today's To Do</h1>
+    <div class="todo-app">
+        <div class="header">
+            <h1>Today's To Do</h1>
+            <i class="fa-solid fa-rotate"></i>
+        </div>
+        <div class="todo-input-wrapper">
+            <input type="text" placeholder="Add to your list...">
+            <ion-icon name="enter-outline"></ion-icon>         
+        </div>
+        <ul class="todo-list-holder">          
+                          
+        </ul>
+        <button type="button" class="clear-all-btn">Clear all completed</button>
     </div>
-    <div>
-        <input type="text">
-    </div>
-    <ul class="todo-list-holder">
-
-    </ul>
-    <button type="button">Clear all completed</button>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 </body>
 
 </html>
