complete add task function, edit task function

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
             <h1>Today's To Do</h1>
             <i class="fa-solid fa-rotate"></i>
         </div>
-        <div class="todo-input-wrapper">
-            <input type="text" placeholder="Add to your list...">
-            <ion-icon name="enter-outline"></ion-icon>         
-        </div>
-        <ul class="todo-list-holder">          
-                          
+        <form action="#" class="todo-input-wrapper">
+            <input type="text" placeholder="Add to your list..." id="add-task-input">
+            <ion-icon class="ionic" name="enter-outline"></ion-icon>
+        </form>
+        <ul class="todo-list-holder">
+
         </ul>
         <button type="button" class="clear-all-btn">Clear all completed</button>
     </div>
